Edits to state-wise manuscript

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -181,12 +181,7 @@ value for \pEm{2.5} and a linear relationship bewteen change in
 
 \end{methods}
 
-%% \begin{figure}[t]
-%%     \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
-%%     \caption{Map of HHS Regions and metropolitan areas}\label{HHSmap}
-%% \end{figure}
-
-\section{U.S. Metro-Regional Analysis}
+\section{Seven State Analysis}
 
 \begin{figure}[t]
     \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
@@ -232,8 +227,14 @@ undue influence by outliers.\ei
 
 \begin{figure}[t]
   \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig4.pdf}}
-    \caption{California}\label{California}
+    \caption{California \& New York Averted DALYs Nationwide}\label{California}
 \end{figure}
+
+\begin{figure}[t]
+    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig5.pdf}}
+    \caption{Counts}\label{counts}
+\end{figure}
+
 
 \section*{Acknowledgment}
 \paragraph{Funding\textcolon} \col[red]{SGY is supported by$\ldots$ , JV, JP, $\ldots$}
