--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -349,7 +349,18 @@ p <- ggplot(subset(D,AgeClass != "00-04"), aes(AgeClass, count/1e3, fill = Sex))
 p + geom_bar(stat="identity", position = "dodge") + scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="Individuals Sampled (Thousands)") + facet_grid( . ~ State) + theme_bw() + theme(axis.text.x  = element_text(angle=90, vjust=0.5, size=6))
 ```
 
+```{r roadInjuries, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, warning = FALSE, message = FALSE, echo = FALSE}
+roadFatalaties <- read.csv(file = "./../data/BikePedDeaths_09-13.csv", na.strings = c("998","999"))
+roadFatalaties <- within(roadFatalaties, {
+  ageClass <- convertToAgeClass(AGE)
+  SEX <- ifelse(SEX == 1, "M", ifelse(SEX == 2, "F", NA))
+  SEX <- factor(SEX, levels = c("F","M"))
+})
+roadFatalaties <- subset(roadFatalaties, !is.na(SEX))
 
+p <- ggplot(roadFatalaties, aes(ageClass, fill = SEX))
+p + geom_bar(position = "dodge") + theme_bw()+ theme(axis.text.x  = element_text(angle=90, vjust=0.5)) + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + facet_grid( death ~ ., scales = "free_y")
+```
 # Appendix
 
 ### CDC Mortality
