--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -17,6 +17,7 @@ library("dplyr")
 library("cowplot")
 library("grid")
 library("scales")
+library("ggthemes")
 ```
 
 ```{r loadITHIM, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = FALSE}
@@ -312,7 +313,6 @@ p + theme_bw() + scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45
 ```
 
 ```{r California, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = phi, warning = FALSE, message = FALSE, echo = FALSE}
-
 ITHIM.national <- updateITHIM(ITHIM.national, parName = "muNonTravel", 10)
 
 ITHIM.CA <- ITHIMList[["CA"]]
@@ -334,8 +334,22 @@ foobar <- within(foobar, {
   Disease <- factor(Disease, levels = c("Breast Cancer", "Colon Cancer", "Dementia", "Depression", "Diabetes"))
 })
 
-p <- ggplot( subset(foobar,ageClass != "ageClass1"), aes(ageClass,-delta.DALY/1e3) )
-p + geom_bar(stat="identity", position = "dodge") + scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + facet_grid( Disease ~ State) + theme_bw() + coord_flip() # + theme(axis.text.x  = element_text(angle=90, vjust=0.5, size=8))
+p <- ggplot( subset(foobar,ageClass != "ageClass1"), aes(ageClass,-delta.DALY/1e3, fill = State) )
+
+upper <- 10
+
+p + geom_bar(stat="identity", position = "dodge") +
+theme(axis.title=element_blank()) +
+facet_grid( Disease ~ ., scales = "free") +
+scale_y_continuous(breaks=seq(1, upper, 1), name="DALYs Averted Nationwide (Thousands)") +
+
+#geom_hline(yintercept=seq(1, upper, 1), col="white", lwd=1) +
+scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) +
+theme_tufte(base_size=12, ticks=T) 
+#
+
+# + annotate("text", x = 3.5, y = 5, adj=1,  family="serif", label = c("Foo")) 
+# + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + facet_grid( Disease ~ State) + coord_flip() # + theme(axis.text.x  = element_text(angle=90, vjust=0.5, size=8))
 ```
 
 ```{r counts, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = phi, warning = FALSE, message = FALSE, echo = FALSE}
