--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -41,23 +41,7 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 \col[blue]{While increased active transportation, primarily cycling
   and walking, is often held up as a goal for improved public health —
   via reduced chronic disease, improved air quality, and reductions in
-  greenhouse gas emissions --- obtaining estimates for the quantiative
-  impacts of such shifts remains infrequent, if not altogether
-  absent from related policy action. Using U.S. metropolitan counties from the 10 regions defined
-  by the U.S. Department of Health and Human Services (HHS1-10) we perform
-  a comparative risk analysis between each regions and national
-  averages as the baseline.  We investigated the reduced chronic
-  disease burden of ($x$, $y$, $z$ outcomes) from increased physical
-  activity from population shifts in the amount of biking and walking
-  doen for transport.  Our methods employ the Integrated Transport and
-  Health Impacts Model (ITHIM) informed by regional travel parameters
-  using the National Household Transportation Survey, non-travel
-  activity metircs from the American Time Use Survey, and baseline
-  Disease burden from the Centers for Disease Control and Prevention's
-  WONDER database.  Our findings show that the West coast and the
-  Northeast of the U.S. have travel patterns that, if mirrored by the
-  nation, would save the U.S. thousands to hundreds of thousands
-  DALYs.}
+  greenhouse gas emissions — obtaining estimates for the quantiative impacts of such shifts remains infrequent, if not altogether absent from related policy action. Using U.S. metropolitan counties from seven states we perform a comparative risk analysis between each regions and national averages as the baseline.  We employ a portion of the Integrated Transport and Health Impacts Model (ITHIM) to investigate the reduced chronic disease burden of (x,y,z outcomes) from changing levels of physical activity with population shifts in the amount of biking and walking done for transport. The analysis is informed by regional travel parameters from the National Household Transportation Survey, non-travel activity metrics from the American Time Use Survey, and baseline disease burden from the Centers for Disease Control and Prevention's WONDER database and the Global Burden of Disease dataset.  Our findings show that the California and New York State have travel patterns that, if mirrored by the nation, would save the U.S. upwards of fifty thousand disability adjusted life years.}
 
 \section{Availability:}
 \col[blue]{\package{} may be explored using the user interface
@@ -76,6 +60,10 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 
 \section{Introduction}
 
+\col{Regular exercise has been shown to provide health benefits in terms of chronic disease prevention \cite{warburton2006}, cognitive function \cite{hillman2008}, and overall well being and satisfaction with life \cite{maher2013}. Still only half of Americans obtain the recommended levels of aerobic activity, which is 2.5 hours per week. There is considerable variability in the attainment of this goal by location within the country. Supportive local built and policy environments are important determinants of population-level activity patterns. Particularly, as they facilitate and foster routine moderate physical activity, such as walking, local decissions on design and policy can play a huge role in the Nation's health.}
+
+\col{To better understand the potential for attainable shifts in transportation behavior across the US, we employed a comparative risk assessment methodology to compare national averages for time spent walking and cycling for transport to those of specific states. Our estimates can provide an important evidence base to encourage new construction, retrofits, land use policy, and programatic funding to support active transportation. Particularly in places with poor attainmnet of the physical activity guidelines, such investments can be importnat pieces of lareger population health interventions that have effective and long-lasting impacts. }
+
 \col{ITHIM is a statistical model that integrates data on travel
   patterns, physical activity, fine particulate matter, GHG emissions,
   and disease and injuries. Based on population and travel
@@ -88,23 +76,7 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
   in the exposure distribution from a baseline scenario to an
   alternative scenario.}
 
-\col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-  aliquip ex ea commodo consequat. Duis aute irure dolor in
-  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-  culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
-  dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-  incididunt ut labore et dolore magna aliqua.}
 
-\col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-  aliquip ex ea commodo consequat. Duis aute irure dolor in
-  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-  culpa qui officia deserunt mollit anim id est laborum.}
 
 
 \begin{methods}
