--- a/manuscript/ITHIM.bib
+++ b/manuscript/ITHIM.bib
@@ -9,6 +9,39 @@ year = {2013},
 number = {1}
 }
 
+@article{hillman2008,
+  title={Be smart, exercise your heart: exercise effects on brain and cognition},
+  author={Hillman, Charles H and Erickson, Kirk I and Kramer, Arthur F},
+  journal={Nature reviews neuroscience},
+  volume={9},
+  number={1},
+  pages={58--65},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{warburton2006,
+  title={Health benefits of physical activity: the evidence},
+  author={Warburton, Darren ER and Nicol, Crystal Whitney and Bredin, Shannon SD},
+  journal={Canadian medical association journal},
+  volume={174},
+  number={6},
+  pages={801--809},
+  year={2006},
+  publisher={Can Med Assoc}
+}
+
+@article{maher2013,
+  title={A daily analysis of physical activity and satisfaction with life in emerging adults.},
+  author={Maher, Jaclyn P and Doerksen, Shawna E and Elavsky, Steriani and Hyde, Amanda L and Pincus, Aaron L and Ram, Nilam and Conroy, David E},
+  journal={Health Psychology},
+  volume={32},
+  number={6},
+  pages={647},
+  year={2013},
+  publisher={American Psychological Association}
+}
+
 @Article{maizlish2013,
 author = {Maizlish, N. and Woodcock, J. and Co, S. and Ostro, B. and Fanai, A. and Farley, D.},
 title = {Health cobenefits and transportation-related
